--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=springai-redis-vector-demo
+spring.ai.vectorstore.redis.uri=localhost
+spring.ai.vectorstore.redis.index=documents
